--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,3 +20,10 @@ spec:
         env:
         - name: JAVA_OPTS
           value: "-Djava.security.egd=file:/dev/./urandom"
+        resources:
+          requests:
+            memory: "256Mi"  
+            cpu: "500m"      
+          limits:
+            memory: "512Mi"  
+            cpu: "1"         
